[package]
name = "imagekit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
async-trait = "0.1.56"
reqwest = { version = "0.11.11", features = ["json", "multipart", "stream"] }
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
