[package]
name = "imagekit"
version = "0.1.0-beta+1"
edition = "2021"
authors = ["Esteban Borai <estebanborai@gmail.com>"]
description = "Simple and configurable command-line HTTP server"
repository = "https://github.com/EstebanBorai/imagekit"
categories = ["web-programming"]
keywords = ["imagekit", "api", "bindings", "image", "upload", "sdk"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
async-trait = "0.1.56"
reqwest = { version = "0.11.11", features = ["json", "multipart", "stream"] }
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
