[package]
name = "imagekit"
version = "0.1.0-beta+1"
edition = "2021"
authors = ["Esteban Borai <estebanborai@gmail.com>"]
description = "Rust API Client for ImageKit.io a file storage and image processing service"
repository = "https://github.com/EstebanBorai/imagekit"
categories = ["web-programming"]
keywords = ["imagekit", "api", "bindings", "image", "upload"]
readme = "README.md"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
anyhow = "1.0.58"
async-trait = "0.1.56"
reqwest = { version = "0.11.11", features = ["json", "multipart", "stream"], default_features = false }
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
